# chemberta_SAE

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/reports/: bace_decision_memo_20260319.docx  (+12 more)
docs/: CHAT_CONTEXT_TRANSFER.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_MASTER.md  ChemBERTa_SAE_layer5.ipynb  EXPERIMENT_PLAN.md  NEXT_CHAT_HANDOFF.md  PROBE_LOG_SUMMARY.md  SAELENS_TRACE_MATRIX.md  overlap_nodes.ipynb  run_baseline_only.py  run_final_hidden_state.py  run_interventions.sh  sae_intervention_experiment.py
scripts/: run.py  run_baseline.py  run_feature_audit.py  run_feature_intervention.py  run_feature_substructure.py  run_final_hidden.py  run_intervention.py  run_layer12_low_search_2048.sh  run_layer12_refine_search.sh  run_layer_balance_search_targeted.sh  run_layer_sweetspot_search.sh  run_layer_sweetspot_search_high.sh  run_overnight.sh  run_sae.py  run_sae_probe.py  summarize_probe_balance.py
tests/: __init__.py  test_apply_b_dec_contract.py  test_batchtopk_sae_lens_contract.py  test_downstream_sae_type.py  test_feature_audit.py  test_feature_audit_cli.py  test_feature_intervention.py  test_feature_intervention_cli.py  test_feature_substructure.py  test_feature_substructure_cli.py  test_jumprelu_dead_mask_contract.py  test_jumprelu_encode.py  test_jumprelu_sae_lens_contract.py  test_l0_warmup_contract.py  test_layers_spec_contract.py  test_probe_cli_resume_contract.py  test_probe_output_contract.py  test_randomness_state.py  test_run_cli_wandb_contract.py  test_train_resume_contract.py  test_wandb_metric_contract.py
(+43 files in other folders)
