[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemberta-sae"
version = "0.1.0"
description = "Refactored ChemBERTa SAE experiment workspace"
requires-python = ">=3.10"
dependencies = [
    "einops",
    "simple-parsing",
    "transformer-lens",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
